<resources>
    <string name="app_name">Notification Scheduler</string>
    <string name="network_type_label">Network Type Required: </string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">WiFi</string>
    <string name="schedule_button">Schedule Job</string>
    <string name="cancel_button">Cancel Job</string>
    <string name="requires">Requires:</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="not_set">Not Set</string>
    <string name="override_deadline">Override Deadline:</string>
</resources>
